Update files included with embedded distributions

--- a/server/configs/webapps/embedded/config/application.properties
+++ b/server/configs/webapps/embedded/config/application.properties
@@ -1,7 +1,6 @@
 server.port=8080
 
 ## To use ssl, update the properties below for your local installation
-
 #server.ssl.enabled=true
 #server.ssl.enabled-protocols=TLSv1.3,TLSv1.2,TLSv1.1
 #server.ssl.protocol=TLS
@@ -15,14 +14,13 @@ server.port=8080
 ## HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 #context.httpPort=8080
 
-## Database connections. All deployments need a labkeyDataSource as their primary database. Add additional external
-## data sources by specifying the required properties (at least driverClassName, url, username, and password)
-## with a prefix of context.resources.jdbc.<dataSourceName>.
+## Database connections.
+## All deployments need a "labkeyDataSource" as their primary database.
 context.resources.jdbc.labkeyDataSource.type=javax.sql.DataSource
-context.resources.jdbc.labkeyDataSource.driverClassName=@@jdbcDriverClassName@@
-context.resources.jdbc.labkeyDataSource.url=@@jdbcURL@@
-context.resources.jdbc.labkeyDataSource.username=@@jdbcUser@@
-context.resources.jdbc.labkeyDataSource.password=@@jdbcPassword@@
+context.resources.jdbc.labkeyDataSource.driverClassName=org.postgresql.Driver
+context.resources.jdbc.labkeyDataSource.url=jdbc:postgresql://localhost:5432/labkey
+context.resources.jdbc.labkeyDataSource.username=<username>
+context.resources.jdbc.labkeyDataSource.password=<password>
 context.resources.jdbc.labkeyDataSource.maxTotal=50
 context.resources.jdbc.labkeyDataSource.maxIdle=10
 context.resources.jdbc.labkeyDataSource.maxWaitMillis=120000
@@ -31,14 +29,18 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.labkeyDataSource.logQueries=true
 #context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
-#context.resources.jdbc.@@extraJdbcDataSource@@.driverClassName=@@extraJdbcDriverClassName@@
-#context.resources.jdbc.@@extraJdbcDataSource@@.url=@@extraJdbcUrl@@
-#context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
-#context.resources.jdbc.@@extraJdbcDataSource@@.password=@@extraJdbcPassword@@
+## Add additional external data sources with a prefix of context.resources.jdbc.<dataSourceName>.
+## At a minimum, they must include the required properties; driverClassName, url, username, and password
+#context.resources.jdbc.extraDataSource.driverClassName=org.postgresql.Driver
+#context.resources.jdbc.extraDataSource.url=jdbc:postgresql://localhost:5432/extraDataSource
+#context.resources.jdbc.extraDataSource.username=<username>
+#context.resources.jdbc.extraDataSource.password=<password>
 
-context.encryptionKey=@@encryptionKey@@
+context.encryptionKey=<encryptionKey>
+#context.oldEncryptionKey=
 
-## By default, we deploy to the root context path. However, some servers have historically used /labkey or even /cpas
+## By default, we serve LabKey at the root context path (e.g. http://localhost:8080)
+## You may customize the context path if you wish (e.g. http://localhost:8080/labkey)
 #context.contextPath=/labkey
 
 ## Using a legacy context path provides backwards compatibility with old deployments. A typical use case would be to
@@ -51,23 +53,24 @@ context.encryptionKey=@@encryptionKey@@
 #context.additionalWebapps.firstContextPath=/my/webapp/path
 #context.additionalWebapps.secondContextPath=/my/other/webapp/path
 
-#context.oldEncryptionKey=
+## Other properties that were previously defined in 'labkey.xml'
 #context.requiredModules=
 #context.pipelineConfig=/path/to/pipeline/config/dir
 #context.serverGUID=
 #context.bypass2FA=true
 #context.workDirLocation=/path/to/desired/workDir
 
-mail.smtpHost=@@smtpHost@@
-mail.smtpPort=@@smtpPort@@
-mail.smtpUser=@@smtpUser@@
+## SMTP configuration
+mail.smtpHost=localhost
+mail.smtpPort=25
+mail.smtpUser=Anonymous
 #mail.smtpFrom=@@smtpFrom@@
 #mail.smtpPassword=@@smtpPassword@@
 #mail.startTlsEnable=@@smtpStartTlsEnable@@
 #mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 #mail.smtpAuth=@@smtpAuth@@
 
-## Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
+## JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
 ## https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
 #context.resources.jms.ConnectionFactory.type=org.apache.activemq.ActiveMQConnectionFactory
 #context.resources.jms.ConnectionFactory.factory=org.apache.activemq.jndi.JNDIReferenceFactory
@@ -78,7 +81,7 @@ mail.smtpUser=@@smtpUser@@
 #context.resources.jms.ConnectionFactory.brokerURL=tcp://localhost:61616
 #context.resources.jms.ConnectionFactory.brokerName=LocalActiveMQBroker
 
-## Optional - LDAP configuration for LDAP group/user synchronization
+## LDAP configuration for LDAP group/user synchronization
 ## https://www.labkey.org/Documentation/wiki-page.view?name=LDAP_sync
 #context.resources.ldap.ConfigFactory.type=org.labkey.premium.ldap.LdapConnectionConfigFactory
 #context.resources.ldap.ConfigFactory.factory=org.labkey.premium.ldap.LdapConnectionConfigFactory
@@ -93,7 +96,8 @@ mail.smtpUser=@@smtpUser@@
 ## HTTP session timeout for users - defaults to 30 minutes
 #server.servlet.session.timeout=30m
 
-## Enable shutdown endpoint. Allows server to be shutdown with a POST to 'localhost:8081/actuator/shutdown
+## Configure shutdown endpoint. Allows server to be shutdown with a POST to 'localhost:8081/actuator/shutdown'
+## This endpoint is insecure and should be used with caution
 #management.endpoint.shutdown.enabled=true
 #management.endpoints.enabled-by-default=false
 #management.endpoints.web.exposure.include=*
@@ -101,60 +105,9 @@ mail.smtpUser=@@smtpUser@@
 
 ## Don't show the Spring banner on startup
 spring.main.banner-mode=off
-#logging.config=path/to/alternative/log4j2.xml
 
-## Optional - JMS configuration for remote ActiveMQ message management for distributed pipeline jobs
-## https://www.labkey.org/Documentation/wiki-page.view?name=jmsQueue
-#context.resources.jms.name=jms/ConnectionFactory
-#context.resources.jms.type=org.apache.activemq.ActiveMQConnectionFactory
-#context.resources.jms.factory=org.apache.activemq.jndi.JNDIReferenceFactory
-#context.resources.jms.description=JMS Connection Factory
-#context.resources.jms.brokerURL=vm://localhost?broker.persistent=false&broker.useJmx=false
-#context.resources.jms.brokerName=LocalActiveMQBroker
-
-## Turn on JSON-formatted HTTP access logging to stdout. See issue 48565
-## https://tomcat.apache.org/tomcat-9.0-doc/config/valve.html#JSON_Access_Log_Valve
-#jsonaccesslog.enabled=true
-
-## Optional configuration, modeled on the non-JSON Spring Boot properties
-## https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html#application-properties.server.server.tomcat.accesslog.buffered
-#jsonaccesslog.pattern=%h %t %m %U %s %b %D %S "%{Referer}i" "%{User-Agent}i" %{LABKEY.username}s
-#jsonaccesslog.condition-if=attributeName
-#jsonaccesslog.condition-unless=attributeName
-
-## Define one or both of 'csp.report' and 'csp.enforce' to enable Content Security Policy (CSP) headers
-## Do not use these examples for any production environment without understanding the meaning of each directive!
-
-## example usage 1 - very strict, disallows 'external' websites, disallows unsafe-inline, but only reports violations (does not enforce)
-
-#csp.report=\
-#    default-src 'self';\
-#    connect-src 'self' ${LABKEY.ALLOWED.CONNECTIONS} ;\
-#    object-src 'none' ;\
-#    style-src 'self' 'unsafe-inline' ;\
-#    img-src 'self' data: ;\
-#    font-src 'self' data: ;\
-#    script-src 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}';\
-#    base-uri 'self' ;\
-#    upgrade-insecure-requests ;\
-#    frame-ancestors 'self' ;\
-#    report-uri https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
-
-## example usage 2 - less strict but enforces directives, (NOTE: unsafe-inline is still required for many modules)
-
-#csp.enforce=\
-#    default-src 'self' https: ;\
-#    connect-src 'self' https: ${LABKEY.ALLOWED.CONNECTIONS};\
-#    object-src 'none' ;\
-#    style-src 'self' https: 'unsafe-inline' ;\
-#    img-src 'self' data: ;\
-#    font-src 'self' data: ;\
-#    script-src 'unsafe-inline' 'unsafe-eval' 'strict-dynamic' 'nonce-${REQUEST.SCRIPT.NONCE}';\
-#    base-uri 'self' ;\
-#    upgrade-insecure-requests ;\
-#    frame-ancestors 'self' ;\
-#    report-uri  https://www.labkey.org/admin-contentsecuritypolicyreport.api?${CSP.REPORT.PARAMS} ;
-
+## Use a custom logging configuration
+#logging.config=labkeywebapp/WEB-INF/classes/log4j2.xml
 
 ## Enable tomcat access log
 #server.tomcat.basedir=.
