Apply suggestions from code review
Co-authored-by: Josh Eckels <jeckels@labkey.com>

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -34,7 +34,7 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
 ## Add additional external data sources with a prefix of context.resources.jdbc.<dataSourceName>.
-## At a minimum, they must include the required properties; driverClassName, url, username, and password
+## At a minimum, they must include the required properties: driverClassName, url, username, and password
 #context.resources.jdbc.@@extraJdbcDataSource@@.driverClassName=@@extraJdbcDriverClassName@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.url=@@extraJdbcUrl@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
