--- a/server/configs/webapps/embedded/config/application.properties
+++ b/server/configs/webapps/embedded/config/application.properties
@@ -30,7 +30,7 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
 ## Add additional external data sources with a prefix of context.resources.jdbc.<dataSourceName>.
-## At a minimum, they must include the required properties; driverClassName, url, username, and password
+## At a minimum, they must include the required properties: driverClassName, url, username, and password
 #context.resources.jdbc.extraDataSource.driverClassName=org.postgresql.Driver
 #context.resources.jdbc.extraDataSource.url=jdbc:postgresql://localhost:5432/extraDataSource
 #context.resources.jdbc.extraDataSource.username=<username>
@@ -39,7 +39,7 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 context.encryptionKey=<encryptionKey>
 #context.oldEncryptionKey=
 
-## By default, we serve LabKey at the root context path (e.g. http://localhost:8080)
+## We strongly recommend deploying LabKey at the root context path (e.g. http://localhost:8080)
 ## You may customize the context path if you wish (e.g. http://localhost:8080/labkey)
 #context.contextPath=/labkey
 
