Fix typo in application.properties: smtpStartTlsEnable

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -70,7 +70,7 @@ mail.smtpPort=@@smtpPort@@
 mail.smtpUser=@@smtpUser@@
 #mail.smtpFrom=@@smtpFrom@@
 #mail.smtpPassword=@@smtpPassword@@
-#mail.startTlsEnable=@@smtpStartTlsEnable@@
+#mail.smtpStartTlsEnable=@@smtpStartTlsEnable@@
 #mail.smtpSocketFactoryClass=@@smtpSocketFactoryClass@@
 #mail.smtpAuth=@@smtpAuth@@
 
