Fix LogQueries property

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -30,8 +30,6 @@ context.resources.jdbc.labkeyDataSource.maxIdle=10
 context.resources.jdbc.labkeyDataSource.maxWaitMillis=120000
 context.resources.jdbc.labkeyDataSource.accessToUnderlyingConnectionAllowed=true
 context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
-#context.resources.jdbc.labkeyDataSource.logQueries=true
-#context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
 ## Add additional external data sources with a prefix of context.resources.jdbc.<dataSourceName>.
 ## At a minimum, they must include the required properties: driverClassName, url, username, and password
@@ -39,6 +37,8 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.@@extraJdbcDataSource@@.url=@@extraJdbcUrl@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.username=@@extraJdbcUsername@@
 #context.resources.jdbc.@@extraJdbcDataSource@@.password=@@extraJdbcPassword@@
+#context.resources.jdbc.@@extraJdbcDataSource@@.logQueries=true
+#context.resources.jdbc.@@extraJdbcDataSource@@.displayName=Alternative Display Name
 
 #useLocalBuild#context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
