--- a/gradle.properties
+++ b/gradle.properties
@@ -91,7 +91,7 @@ npmWorkDirectory=.node
 # gradle.properties file to declare these version numbers. Naming
 # convention is <library name>Version camel-cased, i.e. "jacksonVersion".
 
-activationVersion=2.1.3
+activationApiVersion=2.1.3
 
 annotationsVersion=15.0
 
@@ -205,8 +205,10 @@ javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
 # Dependency for many modules.
+jaxbApiOldVersion=2.3.3
 jaxbApiVersion=4.0.2
-jaxbVersion=4.0.4
+jaxbOldVersion=2.3.3
+jaxbVersion=4.0.5
 
 jaxrpcVersion=1.1
 
