--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -38,7 +38,12 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
 //    implementation "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
-
+    // Force to use latest springVersion for CVE-2024-22262
+    implementation('org.springframework:spring-web') {
+        version {
+            strictly "${springVersion}"
+        }
+    }
     // Force to the latest Tomcat version until Spring Boot 2.7.17 is released and we can adopt it
     implementation('org.apache.tomcat.embed:tomcat-embed-core') {
         version {
