Move substitution to cloud module, since it's the only one that needs it. Add some comments.

--- a/gradle.properties
+++ b/gradle.properties
@@ -204,10 +204,12 @@ javassistVersion=3.20.0-GA
 javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
-# Dependency for many modules.
+# cloud, pipeline, query, and tests (sardine) use the old JAXB API and runtime versions
 jaxbApiOldVersion=2.3.1
-jaxbApiVersion=4.0.2
 jaxbOldVersion=2.3.3
+
+# All other direct and indirect uses of JAXB use the current, jakarta-packaged versions
+jaxbApiVersion=4.0.2
 jaxbVersion=4.0.5
 
 jaxrpcVersion=1.1
