--- a/build.gradle
+++ b/build.gradle
@@ -326,6 +326,7 @@ allprojects {
                     // Force snappy-java version for CVE-2023-43642. Remove once HTSJDK bumps its preferred version.
                     force "org.xerial.snappy:snappy-java:${snappyJavaVersion}"
 
+                    // Consistency between cloud, pipeline, and query
                     force "javax.xml.bind:jaxb-api:${jaxbApiOldVersion}"
 
                     dependencySubstitution {
@@ -364,10 +365,6 @@ allprojects {
 
                         substitute module('org.hamcrest:hamcrest-core') using module("org.hamcrest:hamcrest:${hamcrestVersion}")
                         substitute module('org.hamcrest:hamcrest-library') using module("org.hamcrest:hamcrest:${hamcrestVersion}")
-
-                        // Eliminate discrepancies from SequenceAnalysis dependencies
-                        substitute module('jakarta.xml.bind:jakarta.xml.bind-api:2.3.3') using module("javax.xml.bind:jaxb-api:${jaxbApiOldVersion}")
-                        substitute module('org.glassfish.jaxb:jaxb-runtime:2.3.5') using module("com.sun.xml.bind:jaxb-ri:${jaxbOldVersion}")
                     }
                 }
             }
