--- a/gradle.properties
+++ b/gradle.properties
@@ -91,7 +91,7 @@ npmWorkDirectory=.node
 # gradle.properties file to declare these version numbers. Naming
 # convention is <library name>Version camel-cased, i.e. "jacksonVersion".
 
-activationVersion=2.1.2
+activationApiVersion=2.1.3
 
 annotationsVersion=15.0
 
@@ -172,6 +172,8 @@ gsonVersion=2.8.9
 grpcVersion=1.62.2
 
 guavaVersion=33.1.0-jre
+
+# Note: You won't find usages in the product sources; this property is used by the gradle plugin.
 gwtVersion=2.11.0
 gwtServletJakartaVersion=2.11.0
 # For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
@@ -202,9 +204,13 @@ javassistVersion=3.20.0-GA
 javaMailVersion=2.0.1
 javaxAnnotationVersion=1.3.2
 
-# No longer part of Java 10. Dependency for many modules.
-jaxbApiVersion=2.3.1
-jaxbVersion=2.3.3
+# cloud, pipeline, query, and tests (sardine) use the old JAXB API and runtime versions
+jaxbApiOldVersion=2.3.1
+jaxbOldVersion=2.3.3
+
+# All other direct and indirect uses of JAXB use the current, jakarta-packaged versions
+jaxbApiVersion=4.0.2
+jaxbVersion=4.0.5
 
 jaxrpcVersion=1.1
 
