--- a/server/configs/webapps/embedded/config/application.properties
+++ b/server/configs/webapps/embedded/config/application.properties
@@ -62,6 +62,10 @@ server.port=8080
 ## Previous URLs, GETs, etc. will be redirected or handled server-side via a servlet forward.
 #context.legacyContextPath=/labkey
 
+## We do not recommend deploying to a non-root context path (e.g. http://localhost:8080/labkey)
+## If you do set this property, do not set a legacyContextPath.
+#context.contextPath=/labkey
+
 ####################################################################################
 ## SMTP configuration
 ## Learn more here: https://www.labkey.org/Documentation/wiki-page.view?name=SMTPsettings
