Apply suggestions from code review
Co-authored-by: Josh Eckels <jeckels@labkey.com>

--- a/server/configs/webapps/embedded/config/application.properties
+++ b/server/configs/webapps/embedded/config/application.properties
@@ -21,7 +21,7 @@ context.resources.jdbc.labkeyDataSource.validationQuery=SELECT 1
 #context.resources.jdbc.labkeyDataSource.logQueries=true
 #context.resources.jdbc.labkeyDataSource.displayName=Alternate Display Name
 
-## Add additional external data sources by using a prefix containing a unique extraDataSourceName.
+## Add external data sources using a prefix containing a unique extraDataSourceName.
 ##   i.e. context.resources.jdbc.@@extraDataSourceName@@.<necessary property names>
 ##   At a minimum, they must include these required properties: driverClassName, url, username, and password
 #context.resources.jdbc.@@extraDataSourceName@@.driverClassName=org.postgresql.Driver
@@ -36,9 +36,9 @@ context.encryptionKey=@@encryptionKey@@
 ####################################################################################
 
 ## Set the primary port.
-##   Required. If using HTTPS, this will typically be 443 or 8443.
-##   If using HTTP, this will typically be 80 or 8080
-server.port=8080
+##   Required. If using HTTPS, this will typically be 443.
+##   If using HTTP, this will typically be 80
+server.port=80
 
 ## To use HTTPS, update and uncomment the necessary properties below.
 ##   Learn more here: https://www.labkey.org/Documentation/wiki-page.view?name=labkeyssl
@@ -53,7 +53,7 @@ server.port=8080
 
 ## HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 ##   This must not be the same as the server.port set above.
-#context.httpPort=8080
+#context.httpPort=80
 
 ## We strongly recommend deploying LabKey at the root context path (e.g. http://localhost:8080)
 ## If your previous configuration file was named "ROOT.xml", you were already deployed at the root.
