--- a/server/configs/webapps/embedded/labkey_server.service
+++ b/server/configs/webapps/embedded/labkey_server.service
@@ -12,7 +12,7 @@ After=syslog.target network.target
 Type=simple
 Environment="JAVA_HOME=/usr/lib/jvm/jdk-17.0.10+7"
 Environment="LABKEY_HOME=/labkey/labkey"
-Environment="JAVA_FLAGS_JAR_OPS=-Dorg.apache.catalina.startup.EXIT_ON_INIT_FAILURE=true -DterminateOnStartupFailure=true -Djava.awt.headless=true"
+Environment="JAVA_FLAGS_JAR_OPS=-Dorg.apache.catalina.startup.EXIT_ON_INIT_FAILURE=true -DterminateOnStartupFailure=true"
 Environment="JAVA_REFLECTION_JAR_OPS=--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
 WorkingDirectory=$LABKEY_HOME
 OOMScoreAdjust=-500
