--- a/server/configs/webapps/embedded/labkey_server.service
+++ b/server/configs/webapps/embedded/labkey_server.service
@@ -21,7 +21,7 @@ ExecStart=<JAVA_HOME>/bin/java \
     -Xms2G \
     -Xmx2G \
     -XX:+HeapDumpOnOutOfMemoryError \
-    -XX:ErrorFile=/labkey/labkey/logs/error_%p.log \
+    -XX:ErrorFile=$LABKEY_HOME/logs/error_%p.log \
     -Djava.io.tmpdir=$LABKEY_HOME/labkey-tmp \
     $JAVA_FLAGS_JAR_OPS \
     $JAVA_REFLECTION_JAR_OPS \
