Make embedded tomcat the default

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,11 +21,19 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # The value 'delete' will cause the conflicting version(s) in the build directory to be removed.
 versionConflictAction=delete
 
-# uncomment the following line for running the application with embedded tomcat
-#useEmbeddedTomcat
+# uncomment the following line for running the application with standalone tomcat
+#useEmbeddedTomcat=false
 
-# uncomment the following line when using a local build of a server with embedded tomcat
-#useLocalBuild
+# Used by 'startTomcat' task to permit reflection operations required by Tomcat
+embeddedReflectionArgs=\
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  --add-opens=java.base/java.io=ALL-UNNAMED \
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.desktop/java.awt.font=ALL-UNNAMED \
+  --add-opens=java.base/java.text=ALL-UNNAMED
+
+# Comment the following line when using a pre-build distribution with embedded tomcat
+useLocalBuild
 
 # uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
@@ -62,7 +70,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=2.6.4
+gradlePluginsVersion=2.7.0-embeddedDistFlags-SNAPSHOT
 owaspDependencyCheckPluginVersion=9.1.0
 versioningPluginVersion=1.1.2
 
