--- a/gradle.properties
+++ b/gradle.properties
@@ -21,21 +21,13 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # The value 'delete' will cause the conflicting version(s) in the build directory to be removed.
 versionConflictAction=delete
 
-# uncomment the following line for running the application with standalone tomcat
-#useEmbeddedTomcat=false
+# Comment the following line to deploy the application with standalone tomcat
+useEmbeddedTomcat=true
 
-# Used by 'startTomcat' task to permit reflection operations required by Tomcat
-embeddedReflectionArgs=\
-  --add-opens=java.base/java.lang=ALL-UNNAMED \
-  --add-opens=java.base/java.io=ALL-UNNAMED \
-  --add-opens=java.base/java.util=ALL-UNNAMED \
-  --add-opens=java.desktop/java.awt.font=ALL-UNNAMED \
-  --add-opens=java.base/java.text=ALL-UNNAMED
-
-# Comment the following line when using a pre-build distribution with embedded tomcat
+# Comment the following line when deploying a pre-build distribution with embedded tomcat
 useLocalBuild
 
-# uncomment the following line when using SSL for your embedded tomcat server
+# Uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
 
 # the URL for the artifact repository where our build plugins are housed
