--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -69,8 +69,8 @@ include ":server:modules:snd"
 include ":server:modules:tnprc_ehr"
 include ":server:modules:tnprc_billing"
 include ":server:modules:dataintegration"
-include ":server:modules:premium"
-include ":server:modules:ldap"
+include ":server:modules:premiumModules:premium"
+include ":server:modules:premiumModules:ldap"
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include "${BuildUtils.getTestProjectPath(this.settings.gradle)}:distributions:teamcity"
