--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=2.7.0-embeddedDistFlags-SNAPSHOT
+gradlePluginsVersion=2.7.0
 owaspDependencyCheckPluginVersion=9.1.0
 versioningPluginVersion=1.1.2
 
