--- a/gradle.properties
+++ b/gradle.properties
@@ -21,13 +21,13 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # The value 'delete' will cause the conflicting version(s) in the build directory to be removed.
 versionConflictAction=delete
 
-# uncomment the following line for running the application with embedded tomcat
-#useEmbeddedTomcat
+# Comment the following line to deploy the application with standalone tomcat
+useEmbeddedTomcat=true
 
-# uncomment the following line when using a local build of a server with embedded tomcat
-#useLocalBuild
+# Comment the following line when deploying a pre-build distribution with embedded tomcat
+useLocalBuild
 
-# uncomment the following line when using SSL for your embedded tomcat server
+# Uncomment the following line when using SSL for your embedded tomcat server
 #useSsl
 
 # the URL for the artifact repository where our build plugins are housed
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=2.6.4
+gradlePluginsVersion=2.7.0
 owaspDependencyCheckPluginVersion=9.1.0
 versioningPluginVersion=1.1.2
 
