Remove obsolete comment

--- a/gradle.properties
+++ b/gradle.properties
@@ -244,8 +244,7 @@ mssqlJdbcVersion=12.4.2.jre11
 
 mysqlDriverVersion=8.4.0
 
-# forced compatibility between docker and UserReg-
-# update version in modules/UserReg-WS/gradle.properties as well
+# forced compatibility between docker and UserReg-WS
 nettyVersion=4.1.110.Final
 
 objenesisVersion=1.0
