--- a/build.gradle
+++ b/build.gradle
@@ -159,9 +159,9 @@ allprojects {
 // Temporarily uncomment the block below and update the four-digit number to allow building with Tomcat versions that
 // haven't been released yet. The "VOTE" emails sent to the Tomcat dev email list include a staging repo URL. In
 // addition to updating the url to match, you'll also need to update apacheTomcatVersion in gradle.properties.
-//                    maven {
-//                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
-//                    }
+                    maven {
+                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1498/"
+                    }
                     maven {
                         // Mondrian dependencies are available via this repository. It's a direct dependency of the Query
                         // module but is declared here as many modules depend on Query and therefore need it as well.
