Migrate to Spring Boot 3.3.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -286,11 +286,11 @@ slf4jLog4jApiVersion=2.0.12
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.5
 
-springBootVersion=3.2.6
+springBootVersion=3.3.0
 # This usually matches the Tomcat version dictated by springBootVersion
 # Also, keep this in sync with apacheTomcatVersion above
 springBootTomcatVersion=10.1.24
-
+# This usually matches the Spring Framework version dictated by springBootVersion
 springVersion=6.1.8
 
 sqliteJdbcVersion=3.46.0.0
