--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -40,14 +40,15 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
-//    implementation "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
-    // Force to use latest springVersion for CVE-2024-22262
+
+    // Allows forcing a Spring Framework version that differs from spring-boot's version (e.g., to address CVEs)
     implementation('org.springframework:spring-web') {
         version {
             strictly "${springVersion}"
         }
     }
-    // Force to the latest Tomcat version until Spring Boot 2.7.17 is released and we can adopt it
+
+    // Allows forcing a Tomcat version that differs from spring-boot's version (e.g., to address CVEs or test a release candidate)
     implementation('org.apache.tomcat.embed:tomcat-embed-core') {
         version {
             strictly "${springBootTomcatVersion}"
