--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,8 +29,6 @@ BuildUtils.addLabKeyDependency(project: project, config: 'tomcatJars', depProjec
 
 dependencies
         {
-            tomcatJars "com.sun.mail:jakarta.mail:${javaMailVersion}"
-            tomcatJars "jakarta.activation:jakarta.activation-api:${activationApiVersion}" // JavaMail dependency, so it must be copied to <tomcat>/lib
             remotePipelineJars "jakarta.servlet:jakarta.servlet-api:${servletApiVersion}"
         }
 
@@ -39,16 +37,6 @@ dependencies
    xsdDoc "xml-apis:xml-apis:${xmlApisVersion}"
    xsdDoc "xerces:xercesImpl:${xercesImplVersion}"
    xsdDoc "docflex:docflex-xml-re:${docflexXmlReVersion}"
-}
-
-// Bundle and publish tomcat libs to enable distributions built by standalone modules
-project.tasks.register("tomcatLibsZip", Zip) {
-    Zip zip ->
-        zip.group = GroupNames.BUILD
-        zip.description = "produce jar file with jars to be deployed in \$CATALINA_HOME/lib"
-        zip.from project.configurations.tomcatJars.getAsFileTree()
-        zip.archiveBaseName.set("tomcat-libs")
-        zip.destinationDirectory.set(project.file(project.labkey.explodedModuleLibDir))
 }
 
 configurations
@@ -166,25 +154,10 @@ project.publishing {
             }
         }
 
-        tomcatJars(MavenPublication) {
-            groupId = 'org.labkey.build'
-            artifactId = 'tomcat-libs'
-            version = project.version
-            artifact project.tasks.tomcatLibsZip
-            pom {
-                name = "LabKey Server Tomcat Libs"
-                description = "Additional Tomcat libs for LabKey Server."
-                developers PomFileHelper.getLabKeyTeamDevelopers()
-                licenses PomFileHelper.getApacheLicense()
-                organization PomFileHelper.getLabKeyOrganization()
-                scm PomFileHelper.getLabKeyGitScm()
-            }
-        }
-
         if (BuildUtils.shouldPublish(project))
         {
             project.artifactoryPublish {
-                publications('jsDocs', 'xsdDocs', 'tomcatJars')
+                publications('jsDocs', 'xsdDocs')
             }
             project.subprojects {
                 artifactoryPublish.skip = true
