--- a/server/configs/webapps/embedded/config/application.properties
+++ b/server/configs/webapps/embedded/config/application.properties
@@ -51,6 +51,9 @@ server.port=80
 #server.ssl.key-store-type=PKCS12
 #server.ssl.ciphers=HIGH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!kRSA:!EDH:!DHE:!DH:!CAMELLIA:!ARIA:!AESCCM:!SHA:!CHACHA20
 
+server.error.include-stacktrace=always
+server.error.include-message=always
+
 ## HTTP-only port for servers that need to handle both HTTPS (configure via server.port and server.ssl above) and HTTP
 ##   This must not be the same as the server.port set above.
 #context.httpPort=80
