Issue 51098: Correctly spell "referer" incorrectly

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -176,4 +176,4 @@ csp.report=\
 
 ## File-based Tomcat HTTP access logs are enabled by default and use our recommended pattern. Override as needed.
 #server.tomcat.accesslog.enabled=false
-#server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %S %I "%{Referrer}i" "%{User-Agent}i" %{LABKEY.username}s %{X-Forwarded-For}i
+#server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D %S %I "%{Referer}i" "%{User-Agent}i" %{LABKEY.username}s %{X-Forwarded-For}i
