Eliminate springBootTomcatVersion property

--- a/gradle.properties
+++ b/gradle.properties
@@ -283,10 +283,8 @@ slf4jLog4jApiVersion=2.0.13
 # This is a dependency for HTSJDK. Force version for CVE-2023-43642
 snappyJavaVersion=1.1.10.7
 
+# Also, update apacheTomcatVersion above to match Spring Boot's Tomcat dependency version
 springBootVersion=3.3.4
-# This usually matches the Tomcat version dictated by springBootVersion
-# Also, keep this in sync with apacheTomcatVersion above
-springBootTomcatVersion=10.1.30
 # This usually matches the Spring Framework version dictated by springBootVersion
 springVersion=6.1.13
 
