--- a/server/bootstrap/build.gradle
+++ b/server/bootstrap/build.gradle
@@ -16,7 +16,7 @@ sourceSets {
 
 dependencies
         {
-            def tomcatVersion = project.springBootTomcatVersion
+            def tomcatVersion = project.apacheTomcatVersion
 
             implementation "org.apache.tomcat:tomcat-api:${tomcatVersion}"
             implementation "org.apache.tomcat:tomcat-catalina:${tomcatVersion}"
