Back to published plugins version

--- a/gradle.properties
+++ b/gradle.properties
@@ -59,7 +59,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=4.2.0-dependencies-SNAPSHOT
+gradlePluginsVersion=4.1.0
 owaspDependencyCheckPluginVersion=10.0.3
 versioningPluginVersion=1.1.2
 
