--- a/gradle.properties
+++ b/gradle.properties
@@ -59,7 +59,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=5.2.5
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=4.2.0
+gradlePluginsVersion=4.3.0-version_file-SNAPSHOT
 owaspDependencyCheckPluginVersion=10.0.4
 versioningPluginVersion=1.1.2
 
