force hadoop-hdfs-client to 3.4.1 for CVEs

--- a/gradle.properties
+++ b/gradle.properties
@@ -175,6 +175,9 @@ guavaVersion=33.3.1-jre
 gwtVersion=2.11.0
 gwtServletJakartaVersion=2.11.0
 
+# force hadoop-hdfs-client for CVE-2021-37404, CVE-2022-25168, CVE-2022-26612, CVE-2021-25642, CVE-2021-33036, CVE-2023-26031,
+hadoopHdfsClientVersion=3.4.1
+
 hamcrestVersion=2.2
 
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
@@ -248,6 +251,7 @@ nettyVersion=4.1.113.Final
 objenesisVersion=1.0
 
 # Force patched version of okhttp for CVE-2021-0341 and CVE-2023-0833
+# may be moot after forcing hadoop-hdfs-client to 3.4.1
 okhttpVersion=4.12.0
 
 # increase from 2.0 for remoteclientapi/java
