--- a/gradle.properties
+++ b/gradle.properties
@@ -175,6 +175,9 @@ guavaVersion=33.3.1-jre
 gwtVersion=2.11.0
 gwtServletJakartaVersion=2.11.0
 
+# force hadoop-hdfs-client for CVE-2021-37404, CVE-2022-25168, CVE-2022-26612, CVE-2021-25642, CVE-2021-33036, CVE-2023-26031,
+hadoopHdfsClientVersion=3.4.1
+
 hamcrestVersion=2.2
 
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
